--- a/nginx.yml
+++ b/nginx.yml
@@ -1,21 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: my-nginx
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      run: my-nginx
+  replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        run: my-nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: my-nginx
+        image: nginx
         ports:
         - containerPort: 80
+
