--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: apply -f nginx.yaml
+          args: apply -f ../../nginx.yaml
 
       - name: verify deployment
         uses: kodermax/kubectl-aws-eks@master
